--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://avatars.githubusercontent.com/u/1694080?s=400&v=4
 
 # boolean type, the global switch for ToC in posts.
 toc: true
