--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: Tony Mitchell                          # the main title
 tagline: My little piece of the net   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  Writings on architecture, software development, IoT, and more
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://www.tonymitchell.ca'
@@ -48,7 +48,7 @@ social:
     - https://github.com/tonymitchell       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/anthonyamitchell
 
 google_site_verification:               # fill in to your verification string
 
