--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ avatar: https://avatars.githubusercontent.com/u/1694080?s=400&v=4
 toc: true
 
 comments:
-  active:         # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: 'giscus'         # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname:    # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -99,12 +99,12 @@ comments:
     issue_term:   # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo:             # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping:          # optional, default to 'pathname'
-    input_position:   # optional, default to 'bottom'
+    repo: 'tonymitchell/tonymitchell'            # <gh-username>/<repo>
+    repo_id: 'R_kgDOHXxQjg'
+    category: 'Blog Post'
+    category_id: 'DIC_kwDOHXxQjs4CPYWS'
+    mapping: 'pathname'          # optional, default to 'pathname'
+    input_position: 'bottom'  # optional, default to 'bottom'
     lang:             # optional, default to the value of `site.lang`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
