--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ lang: en
 prefer_datetime_locale: #en-ca
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: America/Vancouver
+timezone: "America/Vancouver"
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
